# AccelMark

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  NOTICE  README.md  SECURITY.md  index.html  leaderboard.js  pyproject.toml  run.py  style.css
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  community_submission.md  config.yml  feature_request.md  new_suite.md
.github/workflows/: generate_leaderboard.yml  process_submissions.yml  validate_pr.yml
api/: chips.json  index.json  rank.json  suites.json
assets/css/: base.css  chip-detail.css  layout.css  modal.css  rankings.css
assets/data/: suite-meta.js
assets/js/: modal.js  utils.js
ci/: generate_leaderboard.yml  validate_pr.yml
configs/: models.yaml  models_local.yaml.example  submitter.yaml.example
configs/runner_configs/: runner_amd_vllm_rocm_523da458.yaml.example  runner_ascend_vllm_ascend_605db33a.yaml.example  runner_ascend_vllm_ascend_a370b094.yaml.example  runner_google_vllm_tpu_68cc9ffa.yaml.example  runner_moorethreads_vllm_musa_57ff5443.yaml.example  runner_moorethreads_vllm_musa_f2f6f965.yaml.example  runner_nvidia_onecat_vllm_12a253c2.yaml.example  runner_nvidia_onecat_vllm_4a9ca6c3.yaml.example  runner_nvidia_onecat_vllm_a43d1bcf.yaml.example  runner_nvidia_sglang_9f42fabb.yaml.example  runner_nvidia_vllm020_0f6c56e4.yaml.example  runner_nvidia_vllm_0c1710bd.yaml.example  runner_nvidia_vllm_2b3890cf.yaml.example  runner_nvidia_vllm_47f5d58e.yaml.example
datasets/: README.md
datasets/sharegpt_edge_v1/: README.md  requests.jsonl
datasets/sharegpt_longctx_v1/: README.md
datasets/sharegpt_standard_v1/: README.md  requests.jsonl
docs/: CONTRIBUTING.md  DEVELOPMENT.md  RUNNING.md  SUBMITTING.md
examples/: download.py  run_all_4gpu.sh  run_all_8gpu.sh  run_all_8gpu_ascend.sh  run_all_suites.sh
leaderboard/: generate.py
leaderboard/site/: index.html
loadgen/: loadgen.py  types.py
loadgen/tests/: test_reliability.py  test_warmup.py
mini/: hardware_assessment.py  mini_suite_selector.py  requests.jsonl  run_mini.py
openclaw-skill/: accelmark_skill.py  skill.json
openclaw_skill/: README.md  accelmark_skill.py  requirements.txt  skill.json
openclaw_skill/mini/: generate_requests.py  requests.jsonl  run_mini.py
openclaw_skill/tests/: test_accelmark_skill.py  test_hardware_assessment.py  test_integration_dry_run.py  test_mini_suite_selector.py  test_run_mini.py
results/: README.md
results/accuracy/: llama-3.1-8b_BF16_2026-03-22.json  meta-llama-3-8b_BF16_2026-03-22.json
runners/: README.md  benchmark_runner.py  collect_env.py  gen_pr_summary.py  hash_runner.py  meta.schema.json  protocol.py  validate_runners.py  validate_submission.py  validate_suites.py
runners/amd_vllm_rocm_523da458/: meta.json  requirements.txt  runner.py
runners/amd_vllm_rocm_5355c2c6/: meta.json  runner.py
runners/amd_vllm_rocm_6c18cd8f/: meta.json  requirements.txt  runner.py
runners/amd_vllm_rocm_d65c6686/: meta.json  runner.py
runners/apple_mlx_lm_9546b8b5/: README.md  meta.json  requirements.txt  runner.py  test_smoke.py
runners/ascend_vllm_ascend_51d0123e/: meta.json  requirements.txt  runner.py
runners/ascend_vllm_ascend_605db33a/: README.md  meta.json  requirements.txt  runner.py
runners/ascend_vllm_ascend_68a18363/: meta.json  requirements.txt  runner.py
runners/ascend_vllm_ascend_6ebe6ef9/: meta.json  runner.py
runners/ascend_vllm_ascend_a370b094/: meta.json  runner.py
runners/ascend_vllm_ascend_d4aa9fda/: README.md  meta.json  requirements.txt  runner.py
runners/google_vllm_tpu_68cc9ffa/: README.md  meta.json  requirements.txt  runner.py  test_smoke.py
runners/moorethreads_vllm_musa_57ff5443/: README.md  meta.json  requirements.txt  runner.py
runners/moorethreads_vllm_musa_f2f6f965/: README.md  meta.json  requirements.txt  runner.py  test_smoke.py
runners/nvidia_onecat_vllm_12a253c2/: README.md  meta.json  requirements.txt  runner.py
runners/nvidia_onecat_vllm_4a9ca6c3/: README.md  meta.json  runner.py
runners/nvidia_onecat_vllm_a43d1bcf/: README.md  meta.json  requirements.txt  runner.py
runners/nvidia_sglang_6da83845/: meta.json  runner.py  (+1 more)
schema/: accuracy_baselines.json  accuracy_subset.README.md  accuracy_subset.jsonl  cloud_pricing.json  env.schema.json  platforms.json  result.schema.json  suite.schema.json
scripts/: benchmark_runner.py  collect_env.py  run_accuracy.py  validate_submission.py
serve/: README.md  adapter.py  capacity.py  server.py
suites/: README.md  SUITES_README.md
test/: dom_stub.mjs  share_helpers.test.mjs  suite_fingerprint.test.mjs  vendor_color.test.mjs
tools/: compare.py  generate_platforms_matrix.py
utils/: run_all_4gpu.sh  run_all_8gpu.sh
(+2064 files in other folders)
