[project]
name = "accelmark"
version = "0.1.0"
description = "Open benchmark leaderboard for AI accelerators on LLM workloads"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Juhao Liang", email = "juhaoliang1997@gmail.com" },
]
maintainers = [
    { name = "Juhao Liang", email = "juhaoliang1997@gmail.com" },
]
keywords = [
    "benchmark",
    "llm",
    "inference",
    "accelerator",
    "gpu",
    "tpu",
    "npu",
    "vllm",
    "sglang",
    "mlx",
    "leaderboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU",
]

dependencies = [
    "jsonschema>=4.0.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.urls]
Homepage      = "https://github.com/FreedomIntelligence/AccelMark"
Leaderboard   = "https://freedomintelligence.github.io/AccelMark"
Documentation = "https://github.com/FreedomIntelligence/AccelMark/blob/main/README.md"
Repository    = "https://github.com/FreedomIntelligence/AccelMark"
Issues        = "https://github.com/FreedomIntelligence/AccelMark/issues"
Changelog     = "https://github.com/FreedomIntelligence/AccelMark/releases"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# AccelMark is primarily a clone-and-run repository (see `python run.py`
# in README.md). `pip install -e .` is supported so contributors can pick
# up the shared deps and import the helper packages (`loadgen`, the base
# `runners.benchmark_runner` class, `serve.adapter` / `serve.capacity`,
# and the `openclaw_skill` entry points) from anywhere — but there is no
# top-level `accelmark` package to invoke via `python -m`.
include = [
    "loadgen*",
    "runners*",
    "serve*",
    "openclaw_skill*",
]
exclude = [
    "tests*",
    "*.tests",
    "*.tests.*",
]
